--- a/package.json
+++ b/package.json
@@ -3,18 +3,24 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@solana/wallet-adapter-base": "^0.9.20",
     "@solana/wallet-adapter-react": "^0.15.4",
     "@solana/wallet-adapter-react-ui": "^0.9.17",
     "@solana/wallet-adapter-wallets": "^0.15.4",
     "@solana/web3.js": "^1.73.3",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
+    "crypto-browserify": "^3.12.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "typescript": "4.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+    "start": "craco start",
+    "build": "craco build"
   },
   "browserslist": {
     "production": [
