--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vm-browserify": "^1.1.2"
   },
   "scripts": {
     "start": "craco start",
