--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "typescript": "4.9.5",
-    "vm-browserify": "^1.1.2"
+    "vm-browserify": "^1.1.2",
+    "serve": "^14.2.0"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "serve -s build",
     "build": "craco build"
   },
   "browserslist": {
